--- a/style/style.scss
+++ b/style/style.scss
@@ -2,6 +2,13 @@
     margin:0;
     padding:0;
 }
-.row{
-    border: 1px red solid;
+header{
+    border: 1px rgb(0, 255, 13) solid;
+}
+th{
+    padding:10px;
+    background-color: rgb(240, 136, 0);
+}
+tr{
+    background-color: rgba(0, 0, 0, 0.925);
 }
