--- a/style/style.scss
+++ b/style/style.scss
@@ -1,14 +1,56 @@
 *{
     margin:0;
     padding:0;
+    font-size: 1rem;
 }
 header{
-    border: 1px rgb(0, 255, 13) solid;
+    background-image: url('/img/Big_sity.png');
 }
-th{
-    padding:10px;
-    background-color: rgb(240, 136, 0);
+.header_width{
+    margin-left:auto;
+    margin-right:auto;
+    max-width: 80%;
 }
-tr{
-    background-color: rgba(0, 0, 0, 0.925);
+.header__list{
+    text-align: center;
+    line-height: 50px;
 }
+.header__item{
+    display: inline-block;
+}
+.header__item:hover{
+    cursor:auto;
+}
+.header_a{
+    color: black;
+}
+.header_a:hover{
+    color: rgb(50, 6, 87);
+    font-size: 1.1rem;
+    text-decoration: none;
+}
+.header__title, .header__title-text{
+    font-family: 'Montserrat', sans-serif;
+    font-size: 2rem;
+    color:black;
+}
+.header__title{
+    margin-top:10rem;
+    font-weight: 700;
+}
+.header__title-text{
+    margin-top:5rem;
+    font-size: 1.3rem;
+}
+.btn {
+    margin-top: 5rem;
+    margin-bottom: 5rem;
+    opacity: 0.7;
+    display: inline-block; 
+    background: #671397; 
+    color: rgb(0, 0, 0); 
+    padding: 1rem 1rem; 
+    text-decoration: none; 
+    border-radius: 3px;
+}
+
