--- a/style/style.scss
+++ b/style/style.scss
@@ -3,6 +3,13 @@
     padding:0;
     font-size: 1rem;
 }
+a:hover{
+    text-decoration: none;
+    color:black;
+    cursor:auto;
+}
+
+// HEADER
 header{
     background-image: url('/img/Big_sity.png');
 }
@@ -42,7 +49,7 @@ header{
     margin-top:5rem;
     font-size: 1.3rem;
 }
-.btn {
+.btn-1 {
     margin-top: 5rem;
     margin-bottom: 5rem;
     opacity: 0.7;
@@ -54,3 +61,67 @@ header{
     border-radius: 3px;
 }
 
+
+
+
+
+
+
+
+// FOOTER
+footer{
+    background-color: rgba(66, 66, 66, 1); 
+    
+      
+}
+.footer{
+    margin-left:auto;
+    margin-right:auto;
+    max-width: 80%;
+    display: flex;
+    justify-content:space-between;
+}
+
+.footer_text-h2{
+    font-family: 'Montserrat', sans-serif;
+    font-size: 1.5rem;
+    color:rgb(218, 218, 218);
+    padding-top:1rem;
+    margin-bottom:0;
+}
+.form-email{
+    color:rgb(218, 218, 218);
+    margin-right:1rem;
+}
+.form-control{
+    margin-right:1rem;
+}
+.form-inline{
+    margin:2rem 0rem;
+}
+.footer_text-h3{
+    font-family: 'Montserrat', sans-serif;
+    font-size: 1.3rem;
+    color:rgb(218, 218, 218);
+    padding-bottom:2rem;
+}
+.footer_text-a{
+    margin-left:0.5rem;  
+}
+.footer_text-a:hover{
+     color:black;
+}
+.email-text{
+    font-family: 'Montserrat', sans-serif;
+    font-size: 1rem;
+    color:rgb(0, 0, 0);
+    margin-bottom:2rem;
+}
+.social{
+    padding-top: 11rem;
+    
+}
+img{
+    width: 70px;
+    height: 70px;
+}
