--- a/style/style.css
+++ b/style/style.css
@@ -4,6 +4,12 @@
   font-size: 1rem;
 }
 
+a:hover {
+  text-decoration: none;
+  color: black;
+  cursor: auto;
+}
+
 header {
   background-image: url("/img/Big_sity.png");
 }
@@ -53,7 +59,7 @@ header {
   font-size: 1.3rem;
 }
 
-.btn {
+.btn-1 {
   margin-top: 5rem;
   margin-bottom: 5rem;
   opacity: 0.7;
@@ -63,5 +69,73 @@ header {
   padding: 1rem 1rem;
   text-decoration: none;
   border-radius: 3px;
+}
+
+footer {
+  background-color: #424242;
+}
+
+.footer {
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 80%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.footer_text-h2 {
+  font-family: 'Montserrat', sans-serif;
+  font-size: 1.5rem;
+  color: #dadada;
+  padding-top: 1rem;
+  margin-bottom: 0;
+}
+
+.form-email {
+  color: #dadada;
+  margin-right: 1rem;
+}
+
+.form-control {
+  margin-right: 1rem;
+}
+
+.form-inline {
+  margin: 2rem 0rem;
+}
+
+.footer_text-h3 {
+  font-family: 'Montserrat', sans-serif;
+  font-size: 1.3rem;
+  color: #dadada;
+  padding-bottom: 2rem;
+}
+
+.footer_text-a {
+  margin-left: 0.5rem;
+}
+
+.footer_text-a:hover {
+  color: black;
+}
+
+.email-text {
+  font-family: 'Montserrat', sans-serif;
+  font-size: 1rem;
+  color: black;
+  margin-bottom: 2rem;
+}
+
+.social {
+  padding-top: 11rem;
+}
+
+img {
+  width: 70px;
+  height: 70px;
 }
 /*# sourceMappingURL=style.css.map */
